--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sua Loja de Materiais de Construção</title>
+    <title>Linha Curitibana</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="site-header">
         <div class="container">
-            <h1 class="logo">Sua Marca</h1>
+            <h1 class="logo">Linha Curitibana</h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Produtos</a></li>
-                    <li><a href="sobrenos.html">Sobre Nós</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">ttt</a></li>
+                    <li><a href="sobrenos.html">Sobre o Lugar</a></li>
+                    <li><a href="#"></a></li>
                 </ul>
             </nav>
             <div class="search-bar">
@@ -23,7 +23,7 @@
                 <button type="submit"><i class="fas fa-search"></i></button>
             </div>
             <div class="cart-icon">
-                <a href="#"><i class="fas fa-shopping-cart"></i> Carrinho (0)</a>
+                <a href="#"><i class="fas fa-shopping-cart"></i>(0)</a>
             </div>
         </div>
     </header>
@@ -32,7 +32,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Encontre tudo para sua construção!</h2>
+                    <h2 class="hero-title">Fim do Mundo com Wi-Fi !</h2>
                     <p class="hero-subtitle">Qualidade, variedade e os melhores preços da região.</p>
                     <a href="#" class="button primary">Ver Produtos</a>
                 </div>
@@ -45,14 +45,14 @@
                 <div class="product-grid">
                     <div class="product-card">
                         <img src="tijolo.site" alt="Tijolo">
-                        <h3>Tijolo Comum</h3>
-                        <p class="price">R$ 1,50 / unidade</p>
-                        <button class="button secondary">Adicionar ao Carrinho</button>
+                        <h3></h3>
+                        <p class="price"></p>
+                        <button class="button secondary"></button>
                     </div>
                     <div class="product-card">
-                        <img src="cimento.site
-" alt="Cimento">
-                        <h3>Saco de Cimento 50kg</h3>
+                        <img src="ttttt
+" alt="ttttt">
+                        <h3>tttttt</h3>
                         <p class="price">R$ 28,90 / saco</p>
                         <button class="button secondary">Adicionar ao Carrinho</button>
                     </div>
