--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <section class="featured-products">
             <div class="container">
-                <h2 class="section-title">Produtos em Destaque</h2>
+                <h2 class="section-title">Fotos em Destaque</h2>
                 <div class="product-grid">
                     <div class="product-card">
                         <img src="tijolo.site" alt="Tijolo">
