--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">ttt</a></li>
-                    <li><a href="sobrenos.html">Sobre o Lugar</a></li>
+                    <li><a href="sobrenos.html">Sobre o Lugar</a>tttt</li>
                     <li><a href="#"></a></li>
                 </ul>
             </nav>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar produtos...">
+                <input type="text" placeholder="Buscar Fotografias...">
                 <button type="submit"><i class="fas fa-search"></i></button>
             </div>
             <div class="cart-icon">
@@ -34,7 +34,7 @@
                 <div class="hero-content">
                     <h2 class="hero-title">Fim do Mundo com Wi-Fi !</h2>
                     <p class="hero-subtitle">Qualidade, variedade e os melhores preços da região.</p>
-                    <a href="#" class="button primary">Ver Produtos</a>
+                    <a href="#" class="button primary">Ver Fotografias</a>
                 </div>
             </div>
         </section>
