--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">ttt</a></li>
-                    <li><a href="sobrenos.html">Sobre o Lugar</a>tttt</li>
+                    <li><a href="sobrenos.html">Sobre o Lugar</a></li>
                     <li><a href="#"></a></li>
                 </ul>
             </nav>
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h2 class="hero-title">Fim do Mundo com Wi-Fi !</h2>
-                    <p class="hero-subtitle">Qualidade, variedade e os melhores preços da região.</p>
+                    <p class="hero-subtitle">Fotos de qualidade, e uma história.</p>
                     <a href="#" class="button primary">Ver Fotografias</a>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                 <h2 class="section-title">Fotos em Destaque</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="tijolo.site" alt="Tijolo">
+                        <img src="tijolo.site" alt="Casa">
                         <h3></h3>
                         <p class="price"></p>
                         <button class="button secondary"></button>
@@ -54,7 +54,7 @@
 " alt="ttttt">
                         <h3>tttttt</h3>
                         <p class="price">R$ 28,90 / saco</p>
-                        <button class="button secondary">Adicionar ao Carrinho</button>
+                        <button class="button secondary">tt</button>
                     </div>
                     <div class="product-card">
                         <img src="areia.site
