--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
                         <button class="button secondary"></button>
                     </div>
                     <div class="product-card">
-                        <img src="ttttt
-" alt="ttttt">
+                        <img src="Paisagem
+" alt="Paisagem">
                         <h3>tttttt</h3>
                         <p class="price">R$ 28,90 / saco</p>
                         <button class="button secondary">tt</button>
                     </div>
                     <div class="product-card">
                         <img src="areia.site
-" alt="Areia">
+" alt="Casa">
                         <h3>Metro Cúbico de Areia</h3>
                         <p class="price">R$ 85,00 / m³</p>
                         <button class="button secondary">Adicionar ao Carrinho</button>
                     </div>
                     <div class="product-card">
                         <img src="ferro.site
-" alt="Ferro">
+" alt="Rua">
                         <h3>Barra de Ferro 10mm</h3>
                         <p class="price">R$ 32,00 / barra</p>
                         <button class="button secondary">Adicionar ao Carrinho</button>
