--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                     </div>
                     <div class="product-card">
                         <img src="areia.site
-" alt="Casa">
+" alt="Lugares">
                         <h3>Metro Cúbico de Areia</h3>
                         <p class="price">R$ 85,00 / m³</p>
-                        <button class="button secondary">Adicionar ao Carrinho</button>
+                        <button class="button secondary">tt</button>
                     </div>
                     <div class="product-card">
                         <img src="ferro.site
 " alt="Rua">
                         <h3>Barra de Ferro 10mm</h3>
                         <p class="price">R$ 32,00 / barra</p>
-                        <button class="button secondary">Adicionar ao Carrinho</button>
+                        <button class="button secondary">tt</button>
                     </div>
                 </div>
             </div>
