--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="product-card">
                         <img src="areia.site
-" alt="Lugares">
+" alt="Salão de Festas">
                         <h3>Metro Cúbico de Areia</h3>
                         <p class="price">R$ 85,00 / m³</p>
                         <button class="button secondary">tt</button>
@@ -66,8 +66,8 @@
                     <div class="product-card">
                         <img src="ferro.site
 " alt="Rua">
-                        <h3>Barra de Ferro 10mm</h3>
-                        <p class="price">R$ 32,00 / barra</p>
+                        <h3></h3>
+                        <p class="price"> / </p>
                         <button class="button secondary">tt</button>
                     </div>
                 </div>
