--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                         <img src="Paisagem
 " alt="Paisagem">
                         <h3>tttttt</h3>
-                        <p class="price">R$ 28,90 / saco</p>
+                        <p class="price"></p>
                         <button class="button secondary">tt</button>
                     </div>
                     <div class="product-card">
                         <img src="areia.site
 " alt="Salão de Festas">
-                        <h3>Metro Cúbico de Areia</h3>
-                        <p class="price">R$ 85,00 / m³</p>
+                        <h3>Salaõ de Festas</h3>
+                        <p class="price"></p>
                         <button class="button secondary">tt</button>
                     </div>
                     <div class="product-card">
@@ -68,7 +68,7 @@
 " alt="Rua">
                         <h3></h3>
                         <p class="price"> / </p>
-                        <button class="button secondary">tt</button>
+                        <button class="button secondary">Rua</button>
                     </div>
                 </div>
             </div>
