--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <h1 class="logo">Linha Curitibana</h1>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">ttt</a></li>
+                    <li><a href="index.html">Página Inicial</a></li>
+                    <li><a href="#"></a></li>
                     <li><a href="sobrenos.html">Sobre o Lugar</a></li>
                     <li><a href="#"></a></li>
                 </ul>
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h2 class="hero-title">Fim do Mundo com Wi-Fi !</h2>
-                    <p class="hero-subtitle">Fotos de qualidade, e uma história.</p>
+                    <p class="hero-subtitle">Fotos de qualidade, e histórias.</p>
                     <a href="#" class="button primary">Ver Fotografias</a>
                 </div>
             </div>
@@ -45,30 +45,30 @@
                 <div class="product-grid">
                     <div class="product-card">
                         <img src="tijolo.site" alt="Casa">
-                        <h3></h3>
+                        <h3>Casa</h3>
                         <p class="price"></p>
                         <button class="button secondary"></button>
                     </div>
                     <div class="product-card">
                         <img src="Paisagem
 " alt="Paisagem">
-                        <h3>tttttt</h3>
+                        <h3>Paisagem</h3>
                         <p class="price"></p>
-                        <button class="button secondary">tt</button>
+                        <button class="button secondary">Paisagem</button>
                     </div>
                     <div class="product-card">
                         <img src="areia.site
 " alt="Salão de Festas">
                         <h3>Salaõ de Festas</h3>
                         <p class="price"></p>
-                        <button class="button secondary">tt</button>
+                        <button class="button secondary">Ver Imagem</button>
                     </div>
                     <div class="product-card">
                         <img src="ferro.site
 " alt="Rua">
                         <h3></h3>
                         <p class="price"> / </p>
-                        <button class="button secondary">Rua</button>
+                        <button class="button secondary"></button>
                     </div>
                 </div>
             </div>
