--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button type="submit"><i class="fas fa-search"></i></button>
             </div>
             <div class="cart-icon">
-                <a href="#"><i class="fas fa-shopping-cart"></i>(0)</a>
+               
             </div>
         </div>
     </header>
@@ -54,7 +54,7 @@
 " alt="Paisagem">
                         <h3>Paisagem</h3>
                         <p class="price"></p>
-                        <button class="button secondary">Paisagem</button>
+                        <button class="button secondary">Ver Imagem</button>
                     </div>
                     <div class="product-card">
                         <img src="areia.site
