--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img src="ferro.site
 " alt="Rua">
                         <h3></h3>
-                        <p class="price"> / </p>
+                        <p class="price">Rua</p>
                         <button class="button secondary">Ver Imagem</button>
                     </div>
                 </div>
