--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img src="ferro.site
 " alt="Rua">
                         <h3></h3>
-                        <p class="price">Rua</p>
+                        <p class="price"></p>
                         <button class="button secondary">Ver Imagem</button>
                     </div>
                 </div>
@@ -76,8 +76,8 @@
 
         <section class="call-to-action">
             <div class="container">
-                <h2>Precisa de ajuda com seu projeto?</h2>
-                <p>Entre em contato com nossos especialistas e receba um orçamento personalizado.</p>
+                <h2>Precisa de ajuda para olhar as imagens?</h2>
+                <p>Entre em contato conosco.</p>
                 <a href="#" class="button primary">Fale Conosco</a>
             </div>
         </section>
