--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="section-title">Fotos em Destaque</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="tijolo.site" alt="t">
+                        <img src="tijolo.site" alt="Minha Casa">
                         <h3>Casa</h3>
                         <p class="price"></p>
                         <button class="button secondary">Ver Imagam</button>
