--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <img src="tijolo.site" alt="Minha Casa">
                         <h3>Casa</h3>
                         <p class="price"></p>
-                        <button class="button secondary">Ver Imagam</button>
+                        <button class="button secondary">Ver Imagem</button>
                     </div>
                     <div class="product-card">
                         <img src="Paisagem
