--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <h2 class="section-title">Fotos em Destaque</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="tijolo.site" alt="Minha Casa">
-                        <h3>Casa</h3>
+                        <img src="tijolo.site" alt="Granja Nossa Senhora Aparecida">
+                        <h3>Granja Nossa Senhora Aparecida</h3>
                         <p class="price"></p>
                         <button class="button secondary">Ver Imagem</button>
                     </div>
