--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="product-card">
                         <img src="areia.site
 " alt="Salão de Festas">
-                        <h3>Salaõ de Festas</h3>
+                        <h3>Impérios Centro de Eventos</h3>
                         <p class="price"></p>
                         <button class="button secondary">Ver Imagem</button>
                     </div>
@@ -76,9 +76,9 @@
 
         <section class="call-to-action">
             <div class="container">
-                <h2>Precisa de ajuda para olhar as imagens?</h2>
+                <h2>Com dificuldades para olhar as fotos?</h2>
                 <p>Entre em contato conosco.</p>
-                <a href="#" class="button primary">Fale Conosco</a>
+                <a href="#" class="button primary">Se em caso de dificuldades, entre em contato conosco.</a>
             </div>
         </section>
     </main>
