--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <section class="call-to-action">
             <div class="container">
                 <h2>Com dificuldades para olhar as fotos?</h2>
-                <p>Entre em contato conosco.</p>
-                <a href="#" class="button primary">Se em caso de dificuldades, entre em contato conosco.</a>
+                <p>Em caso de dificuldades, entre em contato conosco.</p>
+                <a href="#" class="button primary">Nosso Contato.</a>
             </div>
         </section>
     </main>
