--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="section-title">Fotos em Destaque</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="tijolo.site" alt="Granja Nossa Senhora Aparecida">
+                        <img src="tijolo.site" alt="https://drive.google.com/file/d/19agl_3PrVUqHyRWtts_4RTymau_2AjAL/view?usp=drivesdk">
                         <h3>Granja Nossa Senhora Aparecida</h3>
                         <p class="price"></p>
                         <button class="button secondary">Ver Imagem</button>
