--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                     <div class="product-card">
                         <img src="areia.site
 " alt="Salão de Festas">
-                        <h3>Impérios Centro de Eventos</h3>
+                        <h3>Império's Centro de Eventos</h3>
                         <p class="price"></p>
                         <button class="button secondary">Ver Imagem</button>
                     </div>
                     <div class="product-card">
                         <img src="ferro.site
 " alt="Rua">
-                        <h3></h3>
+                        <h3>Rua</h3>
                         <p class="price"></p>
                         <button class="button secondary">Ver Imagem</button>
                     </div>
