--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     </div>
                     <div class="product-card">
                         <img src="ferro.site
-" alt="Rua">
-                        <h3>Rua</h3>
+" alt="Rodovia">
+                        <h3>Rodovia</h3>
                         <p class="price"></p>
                         <button class="button secondary">Ver Imagem</button>
                     </div>
