--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Fim do Mundo com Wi-Fi !</h2>
+                    <h2 class="hero-title">Fim do Mundo com Wi-Fi!</h2>
                     <p class="hero-subtitle">Fotos de qualidade, e histórias.</p>
                     <a href="#" class="button primary">Ver Fotografias</a>
                 </div>
@@ -85,7 +85,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; 2025 Sua Loja de Materiais de Construção. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Linha Curitibana-Capanema-PR.</p>
         </div>
     </footer>
 
