--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <ul>
                     <li><a href="index.html">Página Inicial</a></li>
                     <li><a href="#"></a></li>
-                    <li><a href="sobrenos.html">Sobre o Lugar</a></li>
-                    <li><a href="#">AAAAAAAAAAA</a></li>
+                    <li><a href="sobrenos.html">Sobre o Lugar</a>AAAAAAA</li>
+                    <li><a href="#"></a></li>
                 </ul>
             </nav>
             <div class="search-bar">
