--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li><a href="index.html">Página Inicial</a></li>
                     <li><a href="#"></a></li>
                     <li><a href="sobrenos.html">Sobre o Lugar</a></li>
-                    <li><a href="#">AAAA</a></li>
+                    <li><a href="#"></a></li>
                 </ul>
             </nav>
             <div class="search-bar">
