--- a/sobrenos.html
+++ b/sobrenos.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sua Loja de Materiais de Construção</title>
+    <title>Minha Localização</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="site-header">
         <div class="container">
-            <h1 class="logo">Sobre nós</h1>
+            <h1 class="logo">Sobre o Lugar</h1>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Produtos</a></li>
-                    <li><a href="sobrenos.html">Sobre Nós</a></li>
+                    <li><a href="index.html">Página Inicial</a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="sobrenos.html">Sobre o Lugar</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
@@ -29,7 +29,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Sobre nós</h2>
+                    <h2 class="hero-title">Sobre o Lugar</h2>
                     <p class="hero-subtitle">Bem-vindo à nossa loja de materiais de construção! Aqui, você encontra tudo o que precisa para transformar seus projetos em realidade. Seja para uma reforma, uma construção nova ou pequenos reparos, temos uma vasta variedade de produtos de alta qualidade, desde cimento, tijolos, madeiras, até ferramentas e acessórios. Nossa equipe está sempre pronta para ajudar você a escolher os melhores materiais e oferecer dicas para facilitar seu trabalho. Venha nos visitar e descubra como podemos ajudar a construir seus sonhos com confiança e segurança. Esperamos por você!
 
 </p>
