--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linha Curitibana</title>
+    <title>Linha Curitibana Capanema-PR</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="index.html">Página Inicial</a></li>
                     <li><a href="#"></a></li>
-                    <li><a href="sobrenos.html">Sobre o Lugar</a></li>
+                    <li><a href="sobrenos.html">Sobre os Lugares</a></li>
                     <li><a href="#"></a></li>
                 </ul>
             </nav>
@@ -32,8 +32,8 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Fim do Mundo com Wi-Fi!</h2>
-                    <p class="hero-subtitle">Fotos de qualidade, e histórias.</p>
+                    <h2 class="hero-title">Um pequeno lugar de paz em Capanema-PR</h2>
+                    <p class="hero-subtitle">Fotos de qualidade, e Histórias.</p>
                     <a href="#" class="button primary">Ver Fotografias</a>
                 </div>
             </div>
@@ -47,28 +47,28 @@
                         <img src="tijolo.site" alt="Granja Nossa Senhora Aparecida">
                         <h3>Granja Nossa Senhora Aparecida</h3>
                         <p class="price"></p>
-                        <button class="button secondary">Ver Imagem</button>
+                        <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                     <div class="product-card">
-                        <img src="Paisagem
-" alt="Paisagem">
-                        <h3>Paisagem</h3>
+                        <img src="Paisagem-Antigo Campo de Futebol
+" alt="Paisagem-Antigo Campo de Futebol">
+                        <h3>Paisagem-Antigo Campo de Futebol</h3>
                         <p class="price"></p>
-                        <button class="button secondary">Ver Imagem</button>
+                        <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                     <div class="product-card">
                         <img src="areia.site
-" alt="Salão de Festas">
+" alt="Império's Centro de Eventos">
                         <h3>Império's Centro de Eventos</h3>
                         <p class="price"></p>
-                        <button class="button secondary">Ver Imagem</button>
+                        <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                     <div class="product-card">
                         <img src="ferro.site
-" alt="Rodovia">
-                        <h3>Rodovia</h3>
+" alt="Rodovia PR-281">
+                        <h3>Rodovia PR-281</h3>
                         <p class="price"></p>
-                        <button class="button secondary">Ver Imagem</button>
+                        <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                 </div>
             </div>
