--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="site-header">
         <div class="container">
-            <h1 class="logo">Linha Curitibana</h1>
+            <h1 class="logo">Linha Curitibana Capanema-PR</h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Página Inicial</a></li>
