--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Página Inicial</a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="sobrenos.html"></a></li>
                     <li><a href="sobrenos.html">Sobre os Lugares</a></li>
                     <li><a href="#"></a></li>
                 </ul>
