--- a/sobrenos.html
+++ b/sobrenos.html
@@ -9,12 +9,12 @@
 <body>
     <header class="site-header">
         <div class="container">
-            <h1 class="logo">Sobre o Lugar</h1>
+            <h1 class="logo">Sobre os Lugares</h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Página Inicial</a></li>
                     <li><a href="#"></a></li>
-                    <li><a href="sobrenos.html">Sobre o Lugar</a></li>
+                    <li><a href="sobrenos.html">Sobre os Lugares</a></li>
                     <li><a href="#"></a></li>
                 </ul>
             </nav>
@@ -29,7 +29,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Sobre o Lugar</h2>
+                    <h2 class="hero-title">Sobre os Lugares</h2>
                     <p class="hero-subtitle">Bem-vindo à nossa loja de materiais de construção! Aqui, você encontra tudo o que precisa para transformar seus projetos em realidade. Seja para uma reforma, uma construção nova ou pequenos reparos, temos uma vasta variedade de produtos de alta qualidade, desde cimento, tijolos, madeiras, até ferramentas e acessórios. Nossa equipe está sempre pronta para ajudar você a escolher os melhores materiais e oferecer dicas para facilitar seu trabalho. Venha nos visitar e descubra como podemos ajudar a construir seus sonhos com confiança e segurança. Esperamos por você!
 
 </p>
