--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
             <div class="search-bar">
                 <input type="text" placeholder="Buscar Fotografias...">
-                <button type="submit"><i class="fas fa-search"></i></button>
+                <button type="submit"><i class="fas fa-search">Avaliação (0)</i></button>
             </div>
             <div class="cart-icon">
                
