--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="product-card">
                         <img src="ferro.site" alt="Rodovia PR-281">
-                        <img src="
+                        <img src="foto1.jpg"
                         <h3>Rodovia PR-281</h3>
                         <p class="price"></p>
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
