--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                     <div class="product-card">
-                        <img src="ferro.site" alt="Rodovia PR-281">
-                        <img src="foto1.jpg"
+                         <img src="foto1.jpg" alt="Rodovia PR-281">
+                       
                         <h3>Rodovia PR-281</h3>
                         <p class="price"></p>
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
