--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="section-title">Fotos em Destaque</h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="tijolo.site" alt="Granja Nossa Senhora Aparecida">
+                        <img src="foto4.jpg" alt="Granja Nossa Senhora Aparecida">
                         <h3>Granja Nossa Senhora Aparecida</h3>
                         <p class="price"></p>
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
