--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                     <div class="product-card">
-                        <img src="areia.site
-" alt="Império's Centro de Eventos">
+                        <img src="foto3.jpg"
+ alt="Império's Centro de Eventos">
                         <h3>Império's Centro de Eventos</h3>
                         <p class="price"></p>
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
