--- a/sobrenos.html
+++ b/sobrenos.html
@@ -15,7 +15,7 @@
                     <li><a href="index.html">Página Inicial</a></li>
                     <li><a href="#"></a></li>
                     <li><a href="sobrenos.html">Sobre os Lugares</a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
             <div class="search-bar">
