--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                     <div class="product-card">
-                        <img src="Paisagem-Antigo Campo de Futebol
+                        <img src="foto5.jpg"
 " alt="Paisagem-Antigo Campo de Futebol">
                         <h3>Paisagem-Antigo Campo de Futebol</h3>
                         <p class="price"></p>
