--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     </div>
                     <div class="product-card">
                         <img src=""
-" alt="Paisagem-Antigo Campo de Futebol">
-                        <h3>Paisagem-Antigo Campo de Futebol</h3>
+" alt="Granja Nossa Senhora Aparecida">
+                        <h3>Granja Nossa Senhora Aparecida</h3>
                         <p class="price"></p>
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
