--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <button class="button secondary">Adicionar Imagem (Gostei)</button>
                     </div>
                     <div class="product-card">
-                        <img src=""
+                        <img src="foto2.jpg"
 " alt="Granja Nossa Senhora Aparecida">
                         <h3>Granja Nossa Senhora Aparecida</h3>
                         <p class="price"></p>
