--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Um pequeno lugar de paz em Capanema-PR</h2>
+                    <h2 class="hero-title">Linha Curitibana Capanema-PR</h2>
                     <p class="hero-subtitle">Fotos de qualidade, e Histórias.</p>
                     <a href="#" class="button primary">Ver Fotografias</a>
                 </div>
